# Sigrid

./: .gitignore  CMakeLists.txt  README.md
res/config/: defaultStartup.txt  defaultWindowStartup.txt
res/styles/standard/: arrowColors.txt  pieceColors.txt  pieceImageFilenames.txt  squareColors.txt
res/styles/standard/SetupBoard/: graphicBoard.txt  logicBoard.txt
src/: main.cpp
src/Action/: Action.h
src/Arrow/: Arrow.cpp  Arrow.h  GraphicArrow.cpp  GraphicArrow.h  LogicArrow.cpp  LogicArrow.h
src/Board/: Board.cpp  Board.h  Coord.cpp  Coord.h  GraphicBoard.cpp  GraphicBoard.h  GraphicBoardConfigContainer.cpp  GraphicBoardConfigContainer.h  LogicBoard.cpp  LogicBoard.h  LogicBoardContainer.h
src/Color/: ColorManager.cpp  ColorManager.h
src/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindowConfigContainer.cpp  MainWindowConfigContainer.h
src/Menu/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h
src/Piece/: GraphicPiece.cpp  GraphicPiece.h  LogicPiece.cpp  LogicPiece.h  LogicPieceContainer.h  Piece.cpp  Piece.h  PieceColor.h  PieceContainer.h  PieceIdentifier.cpp  PieceIdentifier.h  PieceManager.cpp  PieceManager.h
src/Tool/: Tool.cpp  Tool.h  ToolManager.cpp  ToolManager.h  ToolSelection.h
src/ToolPicker/: GraphicToolPicker.cpp  GraphicToolPicker.h  ToolPickerWindow.cpp  ToolPickerWindow.h
src/ToolWindow/: ToolItem.cpp  ToolItem.h  ToolWindow.cpp  ToolWindow.h
src/WorkWindow/: WorkWindow.cpp  WorkWindow.h
